--- a/Experiment1.ipynb
+++ b/Experiment1.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experiment 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Objective:-WAP to implement the Perceptron Learning Algorithm using numpy in Python.\n",
+    "Evaluate performance of a single perceptron for NAND and XOR truth tables as input\n",
+    "dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
