--- a/Experiment1.ipynb
+++ b/Experiment1.ipynb
@@ -11,34 +11,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Objective:-WAP to implement the Perceptron Learning Algorithm using numpy in Python.\n",
+    "**Objective:-**\n",
+    "WAP to implement the Perceptron Learning Algorithm using numpy in Python.\n",
     "Evaluate performance of a single perceptron for NAND and XOR truth tables as input\n",
     "dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model Description: Perceptron Classifier\n",
+    "**Model Description:**\n",
+    "\n",
+    "Perceptron Classifier\n",
     "This is a single-layer Perceptron model designed for binary classification tasks using a step activation function.\n",
     "\n",
     "🔹 Model Architecture\n",
+    "\n",
     "Inputs: n features + bias term.\n",
+    "\n",
     "Weights: Randomly initialized, including bias.\n",
+    "\n",
     "Activation Function: Step function (1 if input ≥ 0, else 0).\n",
+    "\n",
     "Learning Rule: Perceptron learning algorithm (weight updates based on error correction).\n",
+    "\n",
+    "\n",
     "🔹 Training Process\n",
+    "\n",
     "Forward Pass: Computes weighted sum and applies step activation.\n",
+    "\n",
     "Weight Update:\n",
     "w=w+η×(target−output)×input\n",
     "η = Learning rate\n",
@@ -47,7 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -173,6 +184,25 @@
     "xor_perceptron.train(xor_X, xor_y)\n",
     "xor_accuracy = xor_perceptron.evaluate(xor_X, xor_y)\n",
     "print(f\"XOR Perceptron Accuracy: {xor_accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Performance Evaluation:**\n",
+    "The NAND perceptron achieves high accuracy, while the XOR perceptron fails due to non\u0002linearity.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**My Comments:**\n",
+    "\n",
+    "The perceptron works well for linearly separable data but fails for non-linearly separable \n",
+    "data. Future improvements could involve using a multi-layer perceptron or adding hidden \n",
+    "layers to handle non-linearity.\n"
    ]
   },
   {
