--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -1,45 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model Description: MLP XOR Classifier\n",
-    "This model is a Multi-Layer Perceptron (MLP) designed to classify XOR logic gate outputs using a step activation function.\n",
+    "**Objective:-**\n",
     "\n",
-    "🔹 Model Architecture\n",
-    "Input Layer: 2 neurons (for XOR inputs).\n",
-    "Hidden Layer: 2 neurons (processing XOR patterns).\n",
-    "Output Layer: 1 neuron (final XOR classification).\n",
-    "Activation Function: Step function (binary thresholding).\n",
-    "🔹 Training Process\n",
-    "Uses a basic weight update rule (no backpropagation).\n",
-    "Adjusts weights based on error correction after each sample.\n",
-    "Learns to correctly classify XOR outputs after multiple epochs.\n",
-    "🔹 Performance\n",
-    "✅ Achieves 100% accuracy after training.\n",
-    "✅ Demonstrates how a simple perceptron-based model can solve nonlinear problems.\n",
-    "\n",
-    "This model highlights the effectiveness of MLPs in handling non-linearly separable problems like XOR. 🚀"
+    "WAP to implement a multi-layer perceptron (MLP) network with one hidden \n",
+    "layer using numpy in Python. Demonstrate that it can learn the XOR Boolean function.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "class MLP_XOR:\n",
-    "    def __init__(self, input_size=2, hidden_size=2, lr=0.1, epochs=150):\n",
+    "    def __init__(self, input_size=2, hidden_size=2, lr=0.1, epochs=500):\n",
     "        self.lr = lr  # Learning rate\n",
     "        self.epochs = epochs  # Number of training iterations\n",
     "        \n",
@@ -89,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training MLP for XOR Gate:\n",
-      "Accuracy: 100.00%\n"
+      "Training MLP for XOR Gate:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 75.00%\n"
      ]
     }
    ],
@@ -119,29 +104,6 @@
     "mlp = MLP_XOR()\n",
     "mlp.train(XOR_X, XOR_y)\n",
     "mlp.evaluate(XOR_X, XOR_y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "MLP XOR Classifier – Code Description\n",
-    "This Python script implements a Multi-Layer Perceptron (MLP) to solve the XOR problem using a step function as the activation function.\n",
-    "\n",
-    "🔹 Key Components\n",
-    "Initialization (__init__): Defines a 2-2-1 neural network with randomly initialized weights and biases.\n",
-    "Step Function: Outputs 1 if input ≥ 0, else 0.\n",
-    "Forward Propagation (forward): Computes activations for the hidden and output layers.\n",
-    "Training (train): Updates weights and biases using error correction.\n",
-    "Prediction (predict): Performs a forward pass to classify inputs.\n",
-    "Evaluation (evaluate): Calculates and prints model accuracy.\n",
-    "🔹 Usage\n",
-    "Defines the XOR dataset.\n",
-    "Trains the model and evaluates accuracy.\n",
-    "🔹 Expected Output\n",
-    "✅ 100% accuracy on XOR classification.\n",
-    "\n",
-    "This step-function-based MLP demonstrates how a simple learning rule can solve the XOR problem efficiently. 🚀"
    ]
   },
   {
