Description exp 2 added

--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -11,6 +11,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Model Description:**\n",
+    "\n",
+    " MLP XOR Classifier\n",
+    "This model is a Multi-Layer Perceptron (MLP) designed to classify XOR logic gate outputs using a step activation function.\n",
+    "\n",
+    "🔹 Model Architecture\n",
+    "Input Layer: 2 neurons (for XOR inputs).\n",
+    "Hidden Layer: 2 neurons (processing XOR patterns).\n",
+    "Output Layer: 1 neuron (final XOR classification).\n",
+    "Activation Function: Step function (binary thresholding).\n",
+    "🔹 Training Process\n",
+    "Uses a basic weight update rule (no backpropagation).\n",
+    "Adjusts weights based on error correction after each sample.\n",
+    "Learns to correctly classify XOR outputs after multiple epochs.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -104,6 +126,25 @@
     "mlp = MLP_XOR()\n",
     "mlp.train(XOR_X, XOR_y)\n",
     "mlp.evaluate(XOR_X, XOR_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Performance Evaluation**\n",
+    "\n",
+    "The model successfully classifies the XOR function and achieves 100% accuracy after training. However, due to the use of the step function, convergence relies heavily on careful weight updates and sufficient training epochs.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**My Comments**\n",
+    "\n",
+    "To further improve training efficiency, consider replacing the step function with a sigmoid or ReLU activation, allowing for smoother weight updates via backpropagation. Adding more hidden neurons could also enhance learning capabilities.\n"
    ]
   },
   {
