--- a/Experiment3.ipynb
+++ b/Experiment3.ipynb
@@ -10,13 +10,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (1338641347.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 17\u001b[1;36m\u001b[0m\n\u001b[1;33m    - Input layer: 784 neurons (28x28 images)\u001b[0m\n\u001b[1;37m                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
+    "# Three-Layer Neural Network using TensorFlow (Without Keras)\n",
+    "\n",
+    "## Overview\n",
+    "- Implements a three-layer feedforward neural network using TensorFlow (without Keras).\n",
+    "- Classifies the MNIST handwritten digits dataset.\n",
+    "- Loads MNIST from CSV files instead of built-in datasets.\n",
+    "- Demonstrates feedforward and backpropagation.\n",
+    "\n",
+    "## Implementation Steps\n",
+    "\n",
+    "1. **Load MNIST Dataset from CSV**\n",
+    "   - Downloads and reads the dataset from CSV files.\n",
+    "   - Splits data into features and labels.\n",
+    "   - Normalizes pixel values to [0, 1].\n",
+    "\n",
+    "2. **Define Network Parameters**\n",
+    "   - Input layer: 784 neurons (28x28 images)\n",
+    "   - Hidden layer 1: 128 neurons (ReLU activation)\n",
+    "   - Hidden layer 2: 64 neurons (ReLU activation)\n",
+    "   - Output layer: 10 neurons (Softmax activation)\n",
+    "   - Learning rate: 0.01\n",
+    "   - Batch size: 100\n",
+    "   - Epochs: 10\n",
+    "\n",
+    "3. **Initialize Weights and Biases**\n",
+    "   - Random initialization of weights.\n",
+    "   - Biases initialized to zeros.\n",
+    "\n",
+    "4. **Define Neural Network Model**\n",
+    "   - Implements forward propagation with matrix multiplications and activations.\n",
+    "\n",
+    "5. **Compute Predictions**\n",
+    "   - Uses softmax activation for classification output.\n",
+    "\n",
+    "6. **Define Loss and Optimizer**\n",
+    "   - Uses cross-entropy loss function.\n",
+    "   - Adam optimizer for training.\n",
+    "\n",
+    "7. **Compute Accuracy**\n",
+    "   - Compares predicted vs actual labels.\n",
+    "\n",
+    "8. **Train the Model**\n",
+    "   - Runs for 10 epochs.\n",
+    "   - Prints loss and accuracy after each epoch.\n",
+    "\n",
+    "9. **Evaluate Model on Test Data**\n",
+    "   - Computes final accuracy on MNIST test dataset.\n",
+    "\n",
+    "## Code Implementation\n",
+    "```python\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "# Disable eager execution for TensorFlow 2.x compatibility\n",
+    "tf.compat.v1.disable_eager_execution()\n",
+    "\n",
+    "# Load MNIST dataset from CSV\n",
+    "train_data = pd.read_csv(\"mnist_train.csv\")\n",
+    "test_data = pd.read_csv(\"mnist_test.csv\")\n",
+    "\n",
+    "# Split features and labels\n",
+    "x_train = train_data.iloc[:, 1:].values / 255.0  # Normalize pixel values\n",
+    "y_train = train_data.iloc[:, 0].values\n",
+    "\n",
+    "x_test = test_data.iloc[:, 1:].values / 255.0\n",
+    "y_test = test_data.iloc[:, 0].values\n",
+    "\n",
+    "# Convert labels to one-hot encoding\n",
+    "def one_hot_encode(labels, num_classes=10):\n",
+    "    return np.eye(num_classes)[labels]\n",
+    "\n",
+    "y_train = one_hot_encode(y_train)\n",
+    "y_test = one_hot_encode(y_test)\n",
+    "\n",
+    "# Define network parameters\n",
+    "input_size = 784   \n",
+    "hidden1_size = 128\n",
+    "hidden2_size = 64\n",
+    "output_size = 10   # 10 classes (digits 0-9)\n",
+    "learning_rate = 0.01\n",
+    "epochs = 10\n",
+    "batch_size = 100\n",
+    "\n",
+    "# Placeholders for input and output\n",
+    "X = tf.compat.v1.placeholder(tf.float32, [None, input_size])\n",
+    "Y = tf.compat.v1.placeholder(tf.float32, [None, output_size])\n",
+    "\n",
+    "# Initialize weights and biases\n",
+    "weights = {\n",
+    "    'w1': tf.Variable(tf.random.normal([input_size, hidden1_size])),\n",
+    "    'w2': tf.Variable(tf.random.normal([hidden1_size, hidden2_size])),\n",
+    "    'w_out': tf.Variable(tf.random.normal([hidden2_size, output_size]))\n",
+    "}\n",
+    "biases = {\n",
+    "    'b1': tf.Variable(tf.zeros([hidden1_size])),\n",
+    "    'b2': tf.Variable(tf.zeros([hidden2_size])),\n",
+    "    'b_out': tf.Variable(tf.zeros([output_size]))\n",
+    "}\n",
+    "\n",
+    "# Define the neural network model\n",
+    "def neural_network(X):\n",
+    "    hidden_layer1 = tf.nn.relu(tf.add(tf.matmul(X, weights['w1']), biases['b1']))\n",
+    "    hidden_layer2 = tf.nn.relu(tf.add(tf.matmul(hidden_layer1, weights['w2']), biases['b2']))\n",
+    "    output_layer = tf.add(tf.matmul(hidden_layer2, weights['w_out']), biases['b_out'])\n",
+    "    return output_layer\n",
+    "\n",
+    "# Compute predictions\n",
+    "logits = neural_network(X)\n",
+    "predictions = tf.nn.softmax(logits)\n",
+    "\n",
+    "# Define loss and optimizer\n",
+    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=Y, logits=logits))\n",
+    "optimizer = tf.compat.v1.train.AdamOptimizer(learning_rate).minimize(loss)\n",
+    "\n",
+    "# Compute accuracy\n",
+    "correct_pred = tf.equal(tf.argmax(predictions, 1), tf.argmax(Y, 1))\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
+    "\n",
+    "# Train the model\n",
+    "with tf.compat.v1.Session() as sess:\n",
+    "    sess.run(tf.compat.v1.global_variables_initializer())\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        avg_loss = 0.0\n",
+    "        total_batch = int(x_train.shape[0] / batch_size)\n",
+    "        \n",
+    "        for i in range(total_batch):\n",
+    "            batch_x = x_train[i * batch_size:(i + 1) * batch_size]\n",
+    "            batch_y = y_train[i * batch_size:(i + 1) * batch_size]\n",
+    "            _, batch_loss = sess.run([optimizer, loss], feed_dict={X: batch_x, Y: batch_y})\n",
+    "            avg_loss += batch_loss / total_batch\n",
+    "        \n",
+    "        train_acc = sess.run(accuracy, feed_dict={X: x_train, Y: y_train})\n",
+    "        print(f\"Epoch {epoch+1}, Loss: {avg_loss:.4f}, Training Accuracy: {train_acc:.4f}\")\n",
+    "    \n",
+    "    # Test accuracy\n",
+    "    test_acc = sess.run(accuracy, feed_dict={X: x_test, Y: y_test})\n",
+    "    print(f\"Test Accuracy: {test_acc:.4f}\")\n",
+    "```\n"
    ]
   },
   {
