--- a/Experiment3.ipynb
+++ b/Experiment3.ipynb
@@ -10,167 +10,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (1338641347.py, line 17)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 17\u001b[1;36m\u001b[0m\n\u001b[1;33m    - Input layer: 784 neurons (28x28 images)\u001b[0m\n\u001b[1;37m                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid decimal literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Manisha\\AppData\\Local\\Temp\\ipykernel_9516\\1968689114.py:25: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\Manisha\\AppData\\Local\\Temp\\ipykernel_9516\\1968689114.py:55: The name tf.train.AdamOptimizer is deprecated. Please use tf.compat.v1.train.AdamOptimizer instead.\n",
+      "\n",
+      "Epoch 1, Loss: 0.1455, Train Accuracy: 95.49, Test Accuracy: 95.33\n",
+      "Epoch 2, Loss: 0.1190, Train Accuracy: 96.14, Test Accuracy: 95.62\n",
+      "Epoch 3, Loss: 0.0978, Train Accuracy: 96.85, Test Accuracy: 95.88\n",
+      "Epoch 4, Loss: 0.0600, Train Accuracy: 98.06, Test Accuracy: 96.90\n",
+      "Epoch 5, Loss: 0.0554, Train Accuracy: 98.24, Test Accuracy: 97.07\n",
+      "Epoch 6, Loss: 0.0617, Train Accuracy: 97.96, Test Accuracy: 96.51\n",
+      "Epoch 7, Loss: 0.0970, Train Accuracy: 96.95, Test Accuracy: 95.63\n",
+      "Epoch 8, Loss: 0.0521, Train Accuracy: 98.28, Test Accuracy: 96.80\n",
+      "Epoch 9, Loss: 0.0345, Train Accuracy: 98.86, Test Accuracy: 97.26\n",
+      "Epoch 10, Loss: 0.0378, Train Accuracy: 98.76, Test Accuracy: 97.17\n",
+      "Epoch 11, Loss: 0.0413, Train Accuracy: 98.61, Test Accuracy: 96.99\n",
+      "Epoch 12, Loss: 0.0372, Train Accuracy: 98.76, Test Accuracy: 97.04\n",
+      "Epoch 13, Loss: 0.0296, Train Accuracy: 98.98, Test Accuracy: 97.29\n",
+      "Epoch 14, Loss: 0.0271, Train Accuracy: 99.03, Test Accuracy: 97.19\n",
+      "Epoch 15, Loss: 0.0378, Train Accuracy: 98.82, Test Accuracy: 97.14\n",
+      "Epoch 16, Loss: 0.0295, Train Accuracy: 98.99, Test Accuracy: 97.10\n",
+      "Epoch 17, Loss: 0.0275, Train Accuracy: 99.04, Test Accuracy: 97.30\n",
+      "Epoch 18, Loss: 0.0212, Train Accuracy: 99.27, Test Accuracy: 97.33\n",
+      "Epoch 19, Loss: 0.0323, Train Accuracy: 98.96, Test Accuracy: 97.10\n",
+      "Epoch 20, Loss: 0.0301, Train Accuracy: 99.02, Test Accuracy: 97.24\n",
+      "Final Train Accuracy: 99.02\n",
+      "Final Test Accuracy: 97.24\n",
+      "Training Complete!\n"
      ]
     }
    ],
    "source": [
-    "# Three-Layer Neural Network using TensorFlow (Without Keras)\n",
-    "\n",
-    "## Overview\n",
-    "- Implements a three-layer feedforward neural network using TensorFlow (without Keras).\n",
-    "- Classifies the MNIST handwritten digits dataset.\n",
-    "- Loads MNIST from CSV files instead of built-in datasets.\n",
-    "- Demonstrates feedforward and backpropagation.\n",
-    "\n",
-    "## Implementation Steps\n",
-    "\n",
-    "1. **Load MNIST Dataset from CSV**\n",
-    "   - Downloads and reads the dataset from CSV files.\n",
-    "   - Splits data into features and labels.\n",
-    "   - Normalizes pixel values to [0, 1].\n",
-    "\n",
-    "2. **Define Network Parameters**\n",
-    "   - Input layer: 784 neurons (28x28 images)\n",
-    "   - Hidden layer 1: 128 neurons (ReLU activation)\n",
-    "   - Hidden layer 2: 64 neurons (ReLU activation)\n",
-    "   - Output layer: 10 neurons (Softmax activation)\n",
-    "   - Learning rate: 0.01\n",
-    "   - Batch size: 100\n",
-    "   - Epochs: 10\n",
-    "\n",
-    "3. **Initialize Weights and Biases**\n",
-    "   - Random initialization of weights.\n",
-    "   - Biases initialized to zeros.\n",
-    "\n",
-    "4. **Define Neural Network Model**\n",
-    "   - Implements forward propagation with matrix multiplications and activations.\n",
-    "\n",
-    "5. **Compute Predictions**\n",
-    "   - Uses softmax activation for classification output.\n",
-    "\n",
-    "6. **Define Loss and Optimizer**\n",
-    "   - Uses cross-entropy loss function.\n",
-    "   - Adam optimizer for training.\n",
-    "\n",
-    "7. **Compute Accuracy**\n",
-    "   - Compares predicted vs actual labels.\n",
-    "\n",
-    "8. **Train the Model**\n",
-    "   - Runs for 10 epochs.\n",
-    "   - Prints loss and accuracy after each epoch.\n",
-    "\n",
-    "9. **Evaluate Model on Test Data**\n",
-    "   - Computes final accuracy on MNIST test dataset.\n",
-    "\n",
-    "## Code Implementation\n",
-    "```python\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "from tensorflow.python.framework.ops import disable_eager_execution\n",
     "\n",
-    "# Disable eager execution for TensorFlow 2.x compatibility\n",
-    "tf.compat.v1.disable_eager_execution()\n",
+    "disable_eager_execution()  # Disable eager execution to use TensorFlow's graph execution\n",
     "\n",
-    "# Load MNIST dataset from CSV\n",
-    "train_data = pd.read_csv(\"mnist_train.csv\")\n",
-    "test_data = pd.read_csv(\"mnist_test.csv\")\n",
-    "\n",
-    "# Split features and labels\n",
-    "x_train = train_data.iloc[:, 1:].values / 255.0  # Normalize pixel values\n",
-    "y_train = train_data.iloc[:, 0].values\n",
-    "\n",
-    "x_test = test_data.iloc[:, 1:].values / 255.0\n",
-    "y_test = test_data.iloc[:, 0].values\n",
+    "# Load MNIST dataset\n",
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
+    "x_train, x_test = x_train.reshape(-1, 784) / 255.0, x_test.reshape(-1, 784) / 255.0\n",
     "\n",
     "# Convert labels to one-hot encoding\n",
-    "def one_hot_encode(labels, num_classes=10):\n",
-    "    return np.eye(num_classes)[labels]\n",
+    "y_train = np.eye(10)[y_train]\n",
+    "y_test = np.eye(10)[y_test]\n",
     "\n",
-    "y_train = one_hot_encode(y_train)\n",
-    "y_test = one_hot_encode(y_test)\n",
-    "\n",
-    "# Define network parameters\n",
-    "input_size = 784   \n",
+    "# Define model hyperparameters\n",
+    "input_size = 784\n",
     "hidden1_size = 128\n",
     "hidden2_size = 64\n",
-    "output_size = 10   # 10 classes (digits 0-9)\n",
+    "output_size = 10\n",
     "learning_rate = 0.01\n",
-    "epochs = 10\n",
     "batch_size = 100\n",
+    "epochs = 20\n",
     "\n",
-    "# Placeholders for input and output\n",
+    "# Define placeholders for input and output\n",
     "X = tf.compat.v1.placeholder(tf.float32, [None, input_size])\n",
-    "Y = tf.compat.v1.placeholder(tf.float32, [None, output_size])\n",
+    "y = tf.compat.v1.placeholder(tf.float32, [None, output_size])\n",
     "\n",
     "# Initialize weights and biases\n",
     "weights = {\n",
-    "    'w1': tf.Variable(tf.random.normal([input_size, hidden1_size])),\n",
-    "    'w2': tf.Variable(tf.random.normal([hidden1_size, hidden2_size])),\n",
-    "    'w_out': tf.Variable(tf.random.normal([hidden2_size, output_size]))\n",
+    "    'w1': tf.Variable(tf.random.truncated_normal([input_size, hidden1_size], stddev=0.1)),\n",
+    "    'w2': tf.Variable(tf.random.truncated_normal([hidden1_size, hidden2_size], stddev=0.1)),\n",
+    "    'w3': tf.Variable(tf.random.truncated_normal([hidden2_size, output_size], stddev=0.1))\n",
     "}\n",
+    "\n",
     "biases = {\n",
     "    'b1': tf.Variable(tf.zeros([hidden1_size])),\n",
     "    'b2': tf.Variable(tf.zeros([hidden2_size])),\n",
-    "    'b_out': tf.Variable(tf.zeros([output_size]))\n",
+    "    'b3': tf.Variable(tf.zeros([output_size]))\n",
     "}\n",
     "\n",
-    "# Define the neural network model\n",
+    "# Define feed-forward neural network\n",
     "def neural_network(X):\n",
-    "    hidden_layer1 = tf.nn.relu(tf.add(tf.matmul(X, weights['w1']), biases['b1']))\n",
-    "    hidden_layer2 = tf.nn.relu(tf.add(tf.matmul(hidden_layer1, weights['w2']), biases['b2']))\n",
-    "    output_layer = tf.add(tf.matmul(hidden_layer2, weights['w_out']), biases['b_out'])\n",
+    "    layer1 = tf.nn.sigmoid(tf.matmul(X, weights['w1']) + biases['b1'])\n",
+    "    layer2 = tf.nn.sigmoid(tf.matmul(layer1, weights['w2']) + biases['b2'])\n",
+    "    output_layer = tf.matmul(layer2, weights['w3']) + biases['b3']\n",
     "    return output_layer\n",
     "\n",
-    "# Compute predictions\n",
+    "# Compute logits\n",
     "logits = neural_network(X)\n",
-    "predictions = tf.nn.softmax(logits)\n",
     "\n",
-    "# Define loss and optimizer\n",
-    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(labels=Y, logits=logits))\n",
-    "optimizer = tf.compat.v1.train.AdamOptimizer(learning_rate).minimize(loss)\n",
+    "# Define loss function (cross-entropy)\n",
+    "loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y, logits=logits))\n",
     "\n",
-    "# Compute accuracy\n",
-    "correct_pred = tf.equal(tf.argmax(predictions, 1), tf.argmax(Y, 1))\n",
+    "# Define optimizer\n",
+    "optimizer = tf.compat.v1.train.AdamOptimizer(learning_rate=learning_rate).minimize(loss)\n",
+    "\n",
+    "# Define accuracy metric\n",
+    "correct_pred = tf.equal(tf.argmax(logits, 1), tf.argmax(y, 1))\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
     "\n",
-    "# Train the model\n",
+    "# Run session\n",
+    "tf.compat.v1.disable_eager_execution()\n",
     "with tf.compat.v1.Session() as sess:\n",
     "    sess.run(tf.compat.v1.global_variables_initializer())\n",
     "    \n",
+    "    # Training loop\n",
     "    for epoch in range(epochs):\n",
-    "        avg_loss = 0.0\n",
-    "        total_batch = int(x_train.shape[0] / batch_size)\n",
+    "        for i in range(0, len(x_train), batch_size):\n",
+    "            batch_x, batch_y = x_train[i:i+batch_size], y_train[i:i+batch_size]\n",
+    "            sess.run(optimizer, feed_dict={X: batch_x, y: batch_y})\n",
     "        \n",
-    "        for i in range(total_batch):\n",
-    "            batch_x = x_train[i * batch_size:(i + 1) * batch_size]\n",
-    "            batch_y = y_train[i * batch_size:(i + 1) * batch_size]\n",
-    "            _, batch_loss = sess.run([optimizer, loss], feed_dict={X: batch_x, Y: batch_y})\n",
-    "            avg_loss += batch_loss / total_batch\n",
-    "        \n",
-    "        train_acc = sess.run(accuracy, feed_dict={X: x_train, Y: y_train})\n",
-    "        print(f\"Epoch {epoch+1}, Loss: {avg_loss:.4f}, Training Accuracy: {train_acc:.4f}\")\n",
+    "        # Calculate and display loss and accuracy at each epoch\n",
+    "        train_loss, train_acc = sess.run([loss, accuracy], feed_dict={X: x_train, y: y_train})\n",
+    "        test_acc = sess.run(accuracy, feed_dict={X: x_test, y: y_test})\n",
+    "        print(f\"Epoch {epoch+1}, Loss: {train_loss:.4f}, Train Accuracy: {train_acc*100:.2f}, Test Accuracy: {test_acc*100:.2f}\")\n",
     "    \n",
-    "    # Test accuracy\n",
-    "    test_acc = sess.run(accuracy, feed_dict={X: x_test, Y: y_test})\n",
-    "    print(f\"Test Accuracy: {test_acc:.4f}\")\n",
-    "```\n"
+    "    # Compute final train and test accuracy\n",
+    "    final_train_acc = sess.run(accuracy, feed_dict={X: x_train, y: y_train})\n",
+    "    final_test_acc = sess.run(accuracy, feed_dict={X: x_test, y: y_test})\n",
+    "    print(f\"Final Train Accuracy: {final_train_acc*100:.2f}\")\n",
+    "    print(f\"Final Test Accuracy: {final_test_acc*100:.2f}\")\n",
+    "    \n",
+    "    print(\"Training Complete!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
